# frame

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/dataset/: default-cached.yaml  default.yaml
configs/dataset/cross_training/: part1.yaml  part2.yaml  part3.yaml  part4.yaml  part5.yaml  part6.yaml
configs/experiments/: backbone.yaml  stf.yaml
configs/loss/: l2-cc.yaml  l2-wr.yaml
configs/lr_scheduler/: 1cycle.yaml
configs/metrics/: default.yaml
configs/model/: backbone.yaml  stf.yaml
configs/optimizer/: adamw.yaml
configs/processing/: default.yaml
configs/training/: default.yaml
scripts/: cache.py  crosscache.sh  crosstrain.sh  end2end.py  eval.py  loop.py  run_on_slurm.sh  train.py
scripts/utils/: __init__.py  training_utils.py
src/framevision/: __init__.py  cli.py
src/framevision/autoloading/: __init__.py  auto.py
src/framevision/camera/: fisheye.py
src/framevision/dataset/: dataset.py
src/framevision/dataset/load_utils/: load.py
src/framevision/dataset/split_utils/: split.py
src/framevision/geometry/: __init__.py  invert.py  rototranslate.py  transforms.py
src/framevision/loss/: __init__.py  l2.py
src/framevision/metrics/: __init__.py  base.py  detailed_mpjpe.py
src/framevision/metrics/utils/: accumulate.py
src/framevision/model/: __init__.py  backbone.py  frame.py  stf.py
src/framevision/model/components/: __init__.py  (+2 more)
src/framevision/pl_wrappers/: __init__.py  dataset.py  model.py
src/framevision/processing/: __init__.py  resize.py
src/framevision/scripts/: download.py  extract.py
(+4 files in other folders)
